src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.body_color {
  background: linear-gradient(90deg, rgba(217, 217, 217, 1) 6%, rgba(0, 0, 0, 1) 150%);
}
.gradient-text {
  background: linear-gradient(90deg, #292929 0%, #FFFFFF 190%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.gradient-white {
  background: linear-gradient(190deg, #FFFFFF 2%, #292929 150%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.bg-color-forecast {
  background: linear-gradient(90deg, #F88508 0%, #F6FAD9 100%);
  -webkit-background-clip: border-box;
  -webkit-text-fill-color: transparent;
}

/* hourly div color */

.gradient_bg {
  background: linear-gradient(140deg, rgba(248,133,8,1) 20%, rgba(246,250,217,1) 200%);
  opacity: 0.9;
}

